# TestFFmpeg

./: build.gradle  settings.gradle
app/: build.gradle
app/libs/include/libavutil/: ffversion.h
app/src/androidTest/java/com/mk/testffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/a_tutorial/: 01_save_gray_frame.cpp  01_save_gray_frame.h
app/src/main/cpp/z_default/: log.h
app/src/main/java/com/mk/testffmpeg/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mk/testffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
